# cryptcoin

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Settings.prod.toml  Settings.toml  data_satoshi.yaml  docker-compose.yaml
config/: Settings.satoshi.toml  Settings.user.toml
src/: account_manager.rs  block.rs  blockchain.rs  genesis.rs  hash.rs  key.rs  lib.rs  main.rs  signature.rs  transaction.rs  user.rs  wallet.rs
src/blockchain/: block.rs  blockchain.rs  currency.rs  hash.rs  key.rs  mod.rs  signature.rs  transaction.rs  wallet.rs
src/messaging/: config.rs  messaging.rs  mod.rs
src/messenger/: config.rs  id.rs  message.rs  messenger.rs  mod.rs  serializer.rs
tests/: integration_test.rs
