[package]
name = "cryptcoin"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
chrono = "0.4.19"
sha2 = "0.10.1"
rsa = "0.5.0"
rand = "0.8.4"
md5 = "0.7.0"
base64 = "0.13.0"
config = "0.11.0"
nats = "0.16.0"
serde = "1.0.133"
serde_yaml = "0.8.23"

[[bin]]
name = "cryptcoin"
path = "src/main.rs"

[lib]
name = "cryptcoin"
path = "src/lib.rs"
